20250125 FOC. Control by speed. Led and workspace modules added.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 02 foc plastic/MDK-ARM/02 foc plastic
 02 foc plastic/MDK-ARM/02*foc plastic.uvguix.user
 02 foc plastic/MDK-ARM/02*foc plastic.uvoptx
+02 foc plastic/MDK-ARM/DebugConfig
+02 foc plastic/MDK-ARM/RTE
+02 foc plastic/MDK-ARM/02*foc plastic.uvprojx
+02 foc plastic/MDK-ARM/02 foc plastic.uvprojx
+02 foc plastic/MDK-ARM
